fixed issues: Work/life pages 4. Footer only shows up when mouse moves into and disappears when mouse moves out. [DONE] 5. Add link to email address so that in the footer so that when it is clicked, email programs can be invoked. [DONE] 6. Footer disappears 5 seconds later after mouse moves out. [DONE] 7. Sub menu only shows up when the parent item is clicked. [DONE] 9. Images not top-aligned with left menu [DONE] 10. Text cannot be copied. [DONE]
Work page
1. Move vision section to life page [DONE]

--- a/lianghaodesign/assets/css/lh_page.css
+++ b/lianghaodesign/assets/css/lh_page.css
@@ -139,7 +139,7 @@ nav {
 .lhd .header-fixed {
   background-color: #E93D1B;
   padding-top: 2.5em;
-  padding-bottom: 1.5em;
+  padding-bottom: 3.4em;
   top: 0;
 }
 
@@ -154,6 +154,14 @@ nav {
 
 .lhd footer ul li {
   line-height: 1.6;
+}
+
+.lhd footer::-moz-selection {
+  background-color: #E93D1B;
+}
+
+.lhd footer*::selection {
+  background-color: #E93D1B;
 }
 
 .lhd footer label {
